Fixing reply box and small spacing issues

--- a/public/css/singlePost.css
+++ b/public/css/singlePost.css
@@ -3,7 +3,7 @@
 }
 
 #posts-start-of-subject .singlePost-reply-box {
-    padding-top:15px;
+    padding:5px 0px 5px 0px !important;
 }
 
 .reply-inline-divs {
